Update webpack and produce a single entry point

--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "./lib/index.js",
   "scripts": {
     "start": "node server.js",
-    "deploy": "NODE_ENV=production webpack -p --config webpack.production.js",
-    "prepare": "babel -d lib/ src/",
+    "prepare": "NODE_ENV=production webpack --config webpack.lib.js",
     "build": "npm run prepare",
     "prepublish": "npm run clean && npm run build",
-    "clean": "rimraf lib"
+    "clean": "rimraf dist"
   },
   "repository": {
     "type": "git",
@@ -23,12 +22,12 @@
   "license": "MIT",
   "homepage": "https://github.com/react-designer/react-designer",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
     "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-plugin-webpack-loaders": "^0.9.0",
@@ -44,8 +43,9 @@
     "style-loader": "^0.23.1",
     "svg-inline-loader": "^0.8.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.30.0",
-    "webpack-dev-server": "^3.3.1"
+    "webpack": "^5.27.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "peerDependencies": {},
   "dependencies": {
